<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/gradient_background" >

    <include layout="@layout/toolbar"/>

    <!-- Registration progress -->
    <ProgressBar android:id="@+id/registration_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView android:id="@+id/registration_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/registration_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <AutoCompleteTextView android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:inputType="textAutoCorrect"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText android:id="@+id/govt_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_id"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_Mobile"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText android:id="@+id/service_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_Service_Summary"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textAutoCorrect"
                 />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:hint="@string/prompt_Address"
                android:ems="10"
                android:id="@+id/address"
                android:layout_gravity="center_horizontal" />

            <com.bluecollar.task.widget.MultiSelectionSpinner
                android:id="@+id/spinner_services"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/textview_border"/>

            <Button android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:text="@string/action_sign_in"
                android:background="@drawable/button_shape"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>

